# dodecaphony

./: .codeclimate.yml  .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: main.yml
docs/: config_with_explanations.yml
docs/demos/: demo_1.mid
dodecaphony/: __init__.py  __main__.py  constants.py  evaluation.py  fragment.py  music_theory.py  optimization.py  rendering.py  transformations.py  utils.py
dodecaphony/configs/: default_config.yml  sinethesizer_presets.yml
dodecaphony/scoring_functions/: __init__.py  harmony.py  melody.py  rhythm.py
requirements/: base.txt  constraints.txt  test.txt
tests/: __init__.py  conftest.py  test_evaluation.py  test_fragment.py  test_music_theory.py  test_optimization.py  test_rendering.py  test_transformations.py  test_utils.py
tests/scoring_functions/: __init__.py  test_harmony.py  test_melody.py  test_rhythm.py
